# q_service

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  bacon.toml  justfile
.github/workflows/: push.yaml  release.yaml
examples/: basic.rs
examples/common/: mod.rs
macros/: Cargo.toml
src/: app.rs  data.rs  deps.rs  lib.rs  run_conditions.rs  scope.rs  service.rs  service_data.rs  service_macro.rs  service_trait.rs  spec.rs  system_params.rs  tasks.rs  world.rs
src/graph/: mod.rs  tarjan.rs
src/lifecycle/: commands.rs  doc.md  events.rs  hooks.rs  mod.rs
tests/: assets.rs  basic.rs  deps.rs
tests/common/: mod.rs
