[package]
name = "q_service"
description = "Services for Bevy"
version = "0.2.0"
authors = ["<phoenix.mandala@pm.me>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ada-x64/q_service"

[package.metadata.bevy_lint]
panicking_methods = { level = "allow" }

[dependencies]
# keep these up-to-date
tracing = { version = "0.1", default-features = false, features = [
    "attributes",
] }
bevy_ecs = "0.16.1"
bevy_platform = "0.16.1"
bevy_app = "0.16.1"
bevy_derive = "0.16.1"
bevy_tasks = "0.16.1"

# other
derivative = "2.2.0"
indexmap = "2.10.0"
paste = "1.0.15"
slotmap = "1.0.7"
smallvec = "1.15.1"
thiserror = "2.0.12"
bevy_asset = "0.16.1"
bevy_state = "0.16"

[dev-dependencies]
bevy = "0.16.1"
