[package]
name = "q_service_macros"
description = "Services for Bevy (macros)"
version = "0.1.0"
authors = ["<phoenix.mandala@pm.me>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ada-x64/q_service"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.99" }
quote = "1.0"
